--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -4,23 +4,41 @@
     	<meta charset="utf-8">
     	<meta name="description" content="Your description goes here">
     	<meta name="keywords" content="one, two, three">
-
-		<title>Blank Template</title>
-
-		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/reset.css">
+		<title>Relaxr Landing Page</title>
+		<link href="https://www.google.com/fonts#UsePlace:use/Collection:Open+Sans)" rel='stylesheet'>
+		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
-
 	</head>
 	<body>
 		<div id="container">
 			<header>
-				<h1>Blank Template</h1>
-				<h2>Just another blank template</h2>
+				<h1 id="firstheader">Relaxr</h1>
+				<h2 id="secondheader">Get piece of mind with a single tap</h2>
+				<button id="topbutton" type="button">Get it now</button>
 			</header>
-			<footer>
-				&copy; Footer Goes Here
-			</footer>
-		</div><!-- #container -->
+		<section id="benefits">
+		<h2 id="thirdheader">Benefits</h2>
+		<p>The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.</p>
+		<ul id="list">
+			<li>Schedule meetings for you</li>
+			<li>Excel automation to complete your work for you</li>
+			<li>Responds to emails on your behalf</li>
+			<li>Does all your work for you with our revolutionary AI technology</li>
+		</ul>
+		</section> 
+		<section id="testamonial">
+			<p id="quote">“Relaxr changed my life. I’ve been able to travel the world, spend limited time working and my boss keeps thanking me for crushing work.”</p>
+			<p id="name">- Amanda, Intuit</p>
+		</section>
+		<section id="signup">
+		<button id="bottombutton" type="button">Sign up now!</button>
+		</section>
+		<footer>
+			<h1 id="bottomheader">Relaxr</h1>
+      <input type="image" src="https://github.com/jayverts/design-and-css-challenge-lab/blob/master/starter_code/images/twitter.png?raw=true"/>
+         <input type="image" src="https://github.com/jayverts/design-and-css-challenge-lab/blob/master/starter_code/images/facebook.png?raw=true"/>
+      <p id="copyright">Copyright 2015. Relaxr</p>
+     </footer>
+    </div>
 	</body>
 </html>
